<resources>
    <string name="app_name">ProjetCinema</string>
    <string name="welcome">cinemaEpul</string>
    <string name="add_actor">Ajouter un acteur</string>
    <string name="add_edit_acteur">Ajout ou édition d\'un acteur</string>
    <string name="name">Nom</string>
    <string name="name_helper">Nom de l\'acteur</string>
    <string name="firstname">Prénom</string>
    <string name="firstname_helper">Prénom de l\'acteur</string>
    <string name="birthday">Date de naissance</string>
    <string name="birthday_helper">Date de naissance</string>
    <string name="death">Date de décès</string>
    <string name="death_helper">Date de décès</string>
    <string name="send">Valider</string>
    <string name="delete">Supprimer</string>
    <string name="id">ID</string>
    <string name="edit">Edit</string>
    <string name="error_fetching">Error fetching actor</string>
    <string name="error_adding">Error adding actor</string>
    <string name="acteur_added">Acteur ajouté</string>
    <string name="acteur_edited">Acteur modifié</string>
    <string name="delete_question">Êtes vous sûr de vouloir supprimer cet acteur ?</string>
    <string name="error_editing">Error editing actor</string>
    <string name="acteur_deleted">Acteur supprimé</string>
    <string name="error_deleting">Erreur lors de la suppression</string>
    <string name="acteur_deletion_error">Erreur lors de la suppression</string>
    <string name="acteur_edition_error">Erreur lors de la modification</string>
    <string name="acteur_adding_error">Erreur lors de l\'ajout</string>
</resources>
